# hypothesis-factory

./: .gitignore  README.md  app.py  pyproject.toml  run.sh
backend/: main.py
docs/: structure.md
frontend/: api_client.py  app.py
notebooks/: app_back_testing.ipynb  local_db_adder.ipynb  mvp.ipynb
notebooks/.ipynb_checkpoints/: mvp-checkpoint.ipynb
src/: api.py
src/hypothesis_factory/: __init__.py  base.py  critic.py  generator.py  ingestion.py  ingestion_gpu.py  pipeline.py  retrieval.py
tests/: test_critic_api.py  test_critic_logic.py  test_generator_api.py  test_generator_logic.py  test_ingestion.py  test_pipeline.py  test_retrieval.py
