[project]
name = "hypothesis-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Указывает pytest, где лежит исходный код
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (сортировка импортов)
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
